Align issue titles and remove title hyperlink
Fixes #17824

--- a/css/default.css
+++ b/css/default.css
@@ -80,7 +80,7 @@ tr.print			{ vertical-align: top; }
 tr.print-category	{ color: #000000; font-weight: bold; }
 
 td.my-buglist-bug	{ width: 0; }
-td.my-buglist-description	{ width: 100%; }
+td.my-buglist-description	{ width: 100%; vertical-align: top; }
 
 /**
  * view_all_bug_page.php
